# severstal-test

./: .dockerignore  .env  .flake8  CHANGELOG.md  Dockerfile  README.md  alembic.ini  docker-compose-1.yml  docker-compose.yml  hypercorn.conf.py  main.py  pyproject.toml  settings.toml
.github/workflows/: ci.yml
src/: app.py  config_log.py  settings.py  utils.py  version.py
src/database/: models.py
src/database/alembic/: env.py
src/database/alembic/versions/: 031ce505af87_make_checks_to_non_negative_float_values.py  2c1a4f8ae283_refactoring_to_pass_mypy.py  3e39d9dd82d6_create_coil_table_1.py  4949a9d30aaa_make_deleted_at_nullable.py  4b274bb633ff_make_create_at_not_nullable.py  c456946e43e8_added_timezones_fix_changed_int_to_float.py  dcf55379994a_create_coil_table.py
src/middleware/: log_middleware.py
src/routes/coils/: abstract_data_storage.py  dao.py  database.py  exceptions.py  schemas.py  views.py
src/routes/healthchecks/: schema.py  spec.py  views.py
