[project]
name = "severstal-test"
version = "0.1.0"
description = "Severstal internship test task"
authors = [
    {name = "KonstantinPetrovichQWERTY",email = "skatkov24@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "hypercorn (>=0.17.3,<0.18.0)",
    "sqlalchemy (>=2.0.39,<3.0.0)",
    "dynaconf (>=3.2.10,<4.0.0)",
    "structlog (>=25.2.0,<26.0.0)",
    "alembic (>=1.15.1,<2.0.0)",
    "pydantic (>=2.10.6,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
